--- a/poker-hands.jinja
+++ b/poker-hands.jinja
@@ -10,6 +10,19 @@
 
 body{
     background-color: #d7d8cd;
+    font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial;
+}
+
+.hand-banner{
+    width: 100%;
+    text-align: center;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    background-color: #1264e8;
 }
 
 .container, .cards, .community-cards{
@@ -65,6 +78,10 @@ body{
 
 .empty-seat{
     border: 1px dashed grey;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
 }
 
 .player-name-line{
@@ -106,6 +123,10 @@ body{
     padding: 0.4em;
 }
 
+.playing-card{
+    background-color: white;
+}
+
 .diams {
     color: #00f;
 }
@@ -117,6 +138,10 @@ body{
 }
 .clubs {
     color: #090;
+}
+
+.events-list{
+    margin-bottom: 15px;
 }
 
 table{
@@ -140,7 +165,24 @@ tbody tr:nth-child(odd) {
     </ul>
 {% endmacro %}
 
+{% macro display_card(card) %}
+    {% set rank_value, suit_char = card %}
+    {% set suit = {'h': 'hearts', 'c': 'clubs',
+                   's': 'spades', 'd': 'diams'}.get(suit_char) %}
+    {% set value = { 14: 'A',
+                     13: 'K',
+                     12: 'Q',
+                     11: 'J'}.get(rank_value, rank_value) %}
+
+    <div class="playing-card {1}">
+            <div class="rank">{{value}}</div>
+            <div class="suit">&{{suit}};</div>
+    </div>
+{% endmacro %}
+
 {% for hand in poker_hands %}
+
+<div class="hand-banner">{{hand.title}}</div>
 
 <div class="container top-summary">
     <div class="info hand-summary">
@@ -157,20 +199,20 @@ tbody tr:nth-child(odd) {
         {% if hand.has_flop %}
             <div class="flop">
                 <div class="cards">
-                    <div class="commcard">{{ hand.flop[0] | display_card }}</div>
-                    <div class="commcard">{{ hand.flop[1] | display_card }}</div>
-                    <div class="commcard">{{ hand.flop[2] | display_card }}</div>
+                    {% for card in hand.flop[:3] %}
+                        <div class="commcard">{{ display_card(card) }}</div>
+                    {% endfor %}
                 </div>
                 <div class="label">Flop</div>
             </div>
             {% if hand.has_turn %}
                 <div class="turn">
-                    <div class="commcard">{{ hand.flop[3] | display_card }}</div>
+                    <div class="commcard">{{ display_card(hand.flop[3])}}</div>
                     <div class="label">Turn</div>
                 </div>
                 {% if hand.has_river %}
                     <div class="river">
-                        <div class="commcard">{{ hand.flop[4] | display_card }}</div>
+                        <div class="commcard">{{ display_card(hand.flop[4])}}</div>
                         <div class="label">River</div>
                     </div>
                 {% endif %}
@@ -196,8 +238,11 @@ tbody tr:nth-child(odd) {
         <div class="def-line chips-start"><div class="label">S:</div><div class="value">{{player.starting_stack}}</div></div>
         <div class="def-line chips-start"><div class="label">E:</div><div class="value">{{player.ending_stack}}</div></div>
         <div class="cards">
-            <div class="card">{{player.pocket[0]|display_card}}</div>
-            <div class="card">{{player.pocket[1]|display_card}}</div>
+            {% if player.has_pocket %}
+                {% for card in player.pocket %}
+                    <div class="card">{{display_card(card)}}</div>
+                {% endfor %}
+            {% endif %}
         </div>
         <div class="def-line chips-start"><div class="label">Str:</div><div class="value">{{player.straddle}}</div></div>
         <div class="player-badges">
@@ -223,7 +268,7 @@ tbody tr:nth-child(odd) {
     {% endfor %}
     {% for box in hand.empty_seats %}
         <div class="info empty-seat player">
-            Empty seat {{box}}
+            <div>Empty seat {{box}}</div>
         </div>
     {% endfor %}
 </div>
@@ -268,7 +313,6 @@ tbody tr:nth-child(odd) {
     </tbody>
 </table>
 </div>
-
 {% endfor %}
 
 </body>
