Give the cards a gradient background that actually looks pretty nice.

--- a/poker-hands.jinja
+++ b/poker-hands.jinja
@@ -119,7 +119,8 @@ body{
 }
 
 .playing-card{
-    background-color: white;
+    background-image: linear-gradient(135deg, white, grey);
+
     border: 1px solid black;
     width: 20px;
     margin: 2px;
