--- a/poker-hands.jinja
+++ b/poker-hands.jinja
@@ -56,9 +56,11 @@ body{
 
 
 .info{
-    border: 1px solid black;
-    box-shadow: 2px 4px #777;
+    border: 2px solid #888;
+    border-radius: 4px;
+    /*box-shadow: 2px 4px #777;*/
     background-color: white;
+    padding: 5px;
 }
 
 .player{
@@ -72,7 +74,7 @@ body{
 }
 
 .empty-seat{
-    border: 1px dashed grey;
+    border-style: dashed;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -122,6 +124,7 @@ body{
     background-image: linear-gradient(135deg, white, grey);
 
     border: 1px solid black;
+    border-radius: 4px;
     width: 20px;
     margin: 2px;
     font-size: 2em;
